@@ -128,16 +128,6 @@
                     </execution>
                 </executions>
             </plugin>
-<!--             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M7</version> <!-- Ensure Surefire supports JUnit 5 -->
-<!--                 <configuration>
-                    <argLine>
-                        --add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-            </plugin>  -->
         </plugins>
     </build>
     <repositories>
